add logout button and add user page