@@ -9,17 +9,18 @@ import io.muzoo.ooc.webapp.basic.servlets.LogoutServlet;
 import org.apache.catalina.Context;
 import org.apache.catalina.startup.Tomcat;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.List;
 
 public class ServletRouter {
 
     private final List<Class<? extends AbstractRoutableHttpServlet>> servletClasses = new ArrayList<>();
-
     {
         servletClasses.add(HomeServlet.class);
         servletClasses.add(LoginServlet.class);
         servletClasses.add(LogoutServlet.class);
+        servletClasses.add(AddUserServlet.class);
     }
 
     public void init(Context ctx) {
@@ -29,13 +30,11 @@ public class ServletRouter {
 
         for (Class<? extends AbstractRoutableHttpServlet> servletClass: servletClasses) {
             try {
-                AbstractRoutableHttpServlet httpServlet = servletClass.newInstance();
+                AbstractRoutableHttpServlet httpServlet = servletClass.getDeclaredConstructor().newInstance();
                 httpServlet.setSecurityService(securityService);
                 Tomcat.addServlet(ctx, servletClass.getSimpleName(), httpServlet);
                 ctx.addServletMapping(httpServlet.getPattern(), servletClass.getSimpleName());
-            } catch (InstantiationException e) {
-                e.printStackTrace();
-            } catch (IllegalAccessException e) {
+            } catch (InstantiationException | NoSuchMethodException | IllegalAccessException | InvocationTargetException e) {
                 e.printStackTrace();
             }
         }
